--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </div>
             </div>
         </div>
-        <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
+        <i class="fa-solid fa-bars hamburg"></i>
         <div class="dropdown">
             <div class="links">
-                <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
+                <i class="fa-solid fa-xmark cancel"></i>
                 <a href="#home">Home</a>
                 <a href="#introduction">Introduction</a>
                 <a href="#skills">Skills</a>
@@ -165,72 +165,65 @@
     </section>
 
     <footer>
-    <p>&copy; 2025 Khắc Huy. All Rights Reserved.</p>
-  </footer>
+        <p>&copy; 2025 Khắc Huy. All Rights Reserved.</p>
+    </footer>
 
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({offset: 50, once: true});
-  </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
 
-  <script>
-    const dropdownMenu = document.querySelector('.dropdown');
-    const body = document.querySelector('body');
-    const dropdownLinks = document.querySelectorAll('.dropdown .links a');
+        AOS.init({offset: 50, once: true});
 
-    function hamburg(){
-        dropdownMenu.style.transform = 'translateY(0)';
-        body.style.overflow = 'hidden';
-    }
+        $(function() {
 
-    function cancel(){
-        dropdownMenu.style.transform = 'translateY(-100%)';
-        body.style.overflow = 'auto';
-    }
+            const $dropdownMenu = $('.dropdown');
+            const $body = $('body');
 
-    dropdownLinks.forEach(link => {
-        link.addEventListener('click', cancel);
-    });
+            $('.hamburg').on('click', function() {
+                $dropdownMenu.addClass('active');
+                $body.addClass('no-scroll');
+            });
 
-    const texts = [
-        "DEVELOPER",
-        "STUDENT",
-        "PROGRAMMER"
-    ];
+            $('.cancel, .dropdown .links a').on('click', function() {
+                $dropdownMenu.removeClass('active');
+                $body.removeClass('no-scroll');
+            });
 
-    let speed = 100;
-    const textElement = document.querySelector('.typewriter-text');
-    let textIndex = 0;
-    let characterIndex = 0;
 
-    function typeWriter(){
-        if(characterIndex < texts[textIndex].length){
-            textElement.textContent += texts[textIndex].charAt(characterIndex);
-            characterIndex++;
-            setTimeout(typeWriter, speed);
-        }
-        else{
-            setTimeout(eraseText, 1500);
-        }
-    }
+            // --- Hiệu ứng Typewriter ---
+            const texts = ["DEVELOPER", "STUDENT", "PROGRAMMER"];
+            let speed = 100;
+            const $textElement = $('.typewriter-text');
+            let textIndex = 0;
+            let characterIndex = 0;
 
-    function eraseText(){
-        if(textElement.textContent.length > 0){
-            textElement.textContent = textElement.textContent.slice(0, -1);
-            setTimeout(eraseText, 50);
-        }
-        else{
-            textIndex = (textIndex + 1) % texts.length;
-            characterIndex = 0;
-            setTimeout(typeWriter, 500);
-        }
-    }
+            function typeWriter() {
+                if (characterIndex < texts[textIndex].length) {
+                    $textElement.text($textElement.text() + texts[textIndex].charAt(characterIndex));
+                    characterIndex++;
+                    setTimeout(typeWriter, speed);
+                } else {
+                    setTimeout(eraseText, 1500);
+                }
+            }
 
-    window.onload = function() {
-        if (textElement) {
-            typeWriter();
-        }
-    };
-  </script>
+            function eraseText() {
+                const currentText = $textElement.text();
+                if (currentText.length > 0) {
+                    $textElement.text(currentText.slice(0, -1));
+                    setTimeout(eraseText, 50);
+                } else {
+                    textIndex = (textIndex + 1) % texts.length;
+                    characterIndex = 0;
+                    setTimeout(typeWriter, 500);
+                }
+            }
+
+            // Bắt đầu hiệu ứng nếu phần tử tồn tại
+            if ($textElement.length) {
+                typeWriter();
+            }
+        });
+    </script>
 </body>
 </html>
