--- a/index.html
+++ b/index.html
@@ -1,60 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <link rel="stylesheet" href="style.css"/>
-  <title>Khắc Huy</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Khắc Huy</title>
+    <link rel="stylesheet" href="style.css" />
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.96/build/spline-viewer.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+    <div class="background-elements"></div>
+
     <nav>
-        <div class="header-background">
-            <div class="logo" data-aos="zoom-in" data-aos-duration="1500">
-                Khắc <span>Huy</span>
-            </div>
-            <div class="nav-container">
-                <div class="links">
-                    <a href="#home" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100">Home</a>
-                    <a href="#introduction" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200">Introduction</a>
-                    <a href="#skills" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">Skills</a>
-                    <a href="#services" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400">Services</a>
-                    <a href="#contact" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500">Contact</a>
-                </div>
-            </div>
+        <div class="nav-logo"><span class="logo-khac">Khắc</span> Huy</div>
+        <div class="nav-links">
+            <a href="#home">Home</a>
+            <a href="#introduction">Introduction</a>
+            <a href="#skills">Skills</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
         </div>
-        <i class="fa-solid fa-bars hamburg"></i>
-        <div class="dropdown">
-            <div class="links">
-                <i class="fa-solid fa-xmark cancel"></i>
-                <a href="#home">Home</a>
-                <a href="#introduction">Introduction</a>
-                <a href="#skills">Skills</a>
-                <a href="#services">Services</a>
-                <a href="#contact">Contact</a>
-            </div>
+        <div class="hamburger" onclick="toggleMenu()">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </nav>
 
+    <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
+    <div class="mobile-menu" id="mobileMenu">
+        <div class="close-btn" onclick="toggleMenu()">
+            <i class="fas fa-times"></i>
+        </div>
+        <a href="#home" onclick="toggleMenu()">Home</a>
+        <a href="#introduction" onclick="toggleMenu()">Introduction</a>
+        <a href="#skills" onclick="toggleMenu()">Skills</a>
+        <a href="#services" onclick="toggleMenu()">Services</a>
+        <a href="#contact" onclick="toggleMenu()">Contact</a>
+    </div>
+
     <section id="home">
-        <div class="main-container">
+        <div class="container">
             <div class="content">
-                <h1 data-aos="fade-right" data-aos-duration="1500" data-aos-delay="600">Hi, I'm <span>Khắc Huy</span></h1>
-                <div data-aos="fade-left" data-aos-duration="1500" data-aos-delay="800" class="typewriter">I'm a <span class="typewriter-text"></span><span class="cursor">|</span></div>
-                <p data-aos="flip-down" data-aos-duration="1500" data-aos-delay="1000">a web developer with experience in developing modern web applications. I am passionate about technology and always looking for opportunities to learn and improve my skills.</p>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/lekhachuy1902" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1200"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/LeKhacHuy1902/Gym-management-system.git" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.facebook.com/share/16bt3KQM5d/" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-facebook"></i></a>
+                <h1 data-aos="fade-right" data-aos-duration="1500">Hi, I'm <span>Khắc Huy</span></h1>
+                <div data-aos="fade-left" data-aos-duration="1500" class="typewriter">I'm a <span class="typewriter-text"></span><span class="cursor">|</span></div>
+                <p data-aos="flip-down" data-aos-duration="1500">a web developer with experience in developing modern web applications. I am passionate about technology and always looking for opportunities to learn and improve my skills.</p>
+                <div class="buttons">
+                    <a href="#contact"><button>Hire Me</button></a>
                 </div>
-                <a href="#contact"><button data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="1700">Hire Me </button></a>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/lekhachuy1902" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/LeKhacHuy1902/Gym-management-system.git" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/share/16bt3KQM5d/" target="_blank"><i class="fab fa-facebook"></i></a>
+                </div>
             </div>
-            <div class="image" data-aos="zoom-in" data-aos-duration="2000">
-                <img src="main.png" alt="Khắc Huy Portrait">
+            <div class="bg-main-container">
+                <div class="bg-main">
+                    <spline-viewer url="https://prod.spline.design/BoWg-dch2T9e59sl/scene.splinecode"></spline-viewer>
+                </div>
             </div>
         </div>
     </section>
@@ -68,13 +74,13 @@
                 </div>
                 <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
                     <h3>Web Developer & Second Year IT Student</h3>
-                    <p>I am a dedicated and passionate web developer currently pursuing my studies. My journey into the world of programming started with a fascination for how websites work, which quickly grew into a love for building elegant and functional digital experiences. I thrive on challenges and am constantly exploring new technologies to enhance my skill set. My goal is to create web applications that are not only visually appealing but also provide a seamless and intuitive user experience.</p>
+                    <p>I am a dedicated and passionate web developer currently pursuing my studies. My journey into the world of programming started with a fascination for how websites work... My goal is to create web applications that are not only visually appealing but also provide a seamless and intuitive user experience.</p>
                     <div class="education-info">
                         <h4>Education and Background</h4>
                         <p><strong>University:</strong> University of Transportation Ho Chi Minh City</p>
                         <p><strong>Hometown:</strong> Chau Thanh, Tien Giang, Viet Nam</p>
                     </div>
-                    <a href="#contact"><button>Get In Touch</button></a>
+                    <a href="#contact"><button class="btn-secondary">Get In Touch</button></a>
                 </div>
             </div>
         </div>
@@ -83,30 +89,54 @@
     <section id="skills">
         <div class="section-container" data-aos="fade-up">
             <h2 class="section-title">My <span>Skills</span></h2>
-            <div class="services-grid">
+            <div class="cards-grid">
                 <div class="service-card" data-aos="fade-up" data-aos-delay="100">
                     <i class="fa-brands fa-html5"></i>
                     <h3>HTML5</h3>
                     <p>Structuring web pages and content with the latest standard markup language.</p>
-                    <div class="skill-level senior">Senior</div>
+                    <div class="skill-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                     <i class="fa-brands fa-css3-alt"></i>
                     <h3>CSS3</h3>
                     <p>Designing and styling modern, responsive layouts for a great user experience.</p>
-                    <div class="skill-level senior">Senior</div>
+                    <div class="skill-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                     <i class="fa-brands fa-js"></i>
                     <h3>JavaScript</h3>
                     <p>Enabling interactive and dynamic functionality on web pages to engage users.</p>
-                    <div class="skill-level junior">Junior</div>
+                    <div class="skill-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                     <i class="fa-brands fa-git-alt"></i>
                     <h3>Git</h3>
                     <p>Using version control to efficiently manage code and collaborate on projects.</p>
-                    <div class="skill-level senior">Senior</div>
+                    <div class="skill-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -115,7 +145,7 @@
     <section id="services">
         <div class="section-container" data-aos="fade-up">
             <h2 class="section-title">What I <span>Offer</span></h2>
-            <div class="services-grid">
+            <div class="cards-grid">
                 <div class="service-card" data-aos="fade-up" data-aos-delay="100">
                     <i class="fa-solid fa-palette"></i>
                     <h3>Web Design</h3>
@@ -144,20 +174,20 @@
         <div class="section-container" data-aos="fade-up">
             <h2 class="section-title">Get In <span>Touch</span></h2>
             <div class="contact-container">
-                 <form action="#" class="contact-form" data-aos="fade-right">
+                <form action="#" class="contact-form" data-aos="fade-right">
                     <input type="text" placeholder="Your Name" required>
                     <input type="email" placeholder="Your Email" required>
                     <textarea rows="6" placeholder="Your Message" required></textarea>
                     <button type="submit">Send Message</button>
                 </form>
                 <div class="contact-info" data-aos="fade-left">
-                     <h3>Contact Information</h3>
-                     <p><i class="fa-solid fa-envelope"></i> huylk4597@gmail.com</p>
-                     <p><i class="fa-solid fa-phone"></i> (+84) 083 555 2953</p>
-                     <div class="social-links-contact">
-                        <a href="www.linkedin.com/in/lekhachuy1902" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1200"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/LeKhacHuy1902/Gym-management-system.git" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.facebook.com/share/16bt3KQM5d/" target="_blank" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1400"><i class="fa-brands fa-facebook"></i></a>
+                    <h3>Contact Information</h3>
+                    <p><i class="fa-solid fa-envelope"></i> huylk4597@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i> (+84) 083 555 2953</p>
+                    <div class="social-links-contact">
+                        <a href="https://www.linkedin.com/in/lekhachuy1902" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/LeKhacHuy1902/Gym-management-system.git" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/share/16bt3KQM5d/" target="_blank"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
@@ -171,56 +201,52 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
+        // AOS Initialization
+        AOS.init({ offset: 50, once: true });
 
-        AOS.init({offset: 50, once: true});
+        // Mobile Menu Toggle Function
+        function toggleMenu() {
+            const hamburger = document.querySelector('.hamburger');
+            const mobileMenu = document.getElementById('mobileMenu');
+            const overlay = document.getElementById('overlay');
+            const body = document.body;
+
+            hamburger.classList.toggle('open');
+            mobileMenu.classList.toggle('open');
+            overlay.classList.toggle('active');
+            body.style.overflow = mobileMenu.classList.contains('open') ? 'hidden' : '';
+        }
 
         $(function() {
-
-            const $dropdownMenu = $('.dropdown');
-            const $body = $('body');
-
-            $('.hamburg').on('click', function() {
-                $dropdownMenu.addClass('active');
-                $body.addClass('no-scroll');
-            });
-
-            $('.cancel, .dropdown .links a').on('click', function() {
-                $dropdownMenu.removeClass('active');
-                $body.removeClass('no-scroll');
-            });
-
-
-            // --- Hiệu ứng Typewriter ---
+            // --- Typewriter Effect ---
             const texts = ["DEVELOPER", "STUDENT", "PROGRAMMER"];
             let speed = 100;
             const $textElement = $('.typewriter-text');
-            let textIndex = 0;
-            let characterIndex = 0;
-
-            function typeWriter() {
-                if (characterIndex < texts[textIndex].length) {
-                    $textElement.text($textElement.text() + texts[textIndex].charAt(characterIndex));
-                    characterIndex++;
-                    setTimeout(typeWriter, speed);
-                } else {
-                    setTimeout(eraseText, 1500);
-                }
-            }
-
-            function eraseText() {
-                const currentText = $textElement.text();
-                if (currentText.length > 0) {
-                    $textElement.text(currentText.slice(0, -1));
-                    setTimeout(eraseText, 50);
-                } else {
-                    textIndex = (textIndex + 1) % texts.length;
-                    characterIndex = 0;
-                    setTimeout(typeWriter, 500);
-                }
-            }
-
-            // Bắt đầu hiệu ứng nếu phần tử tồn tại
             if ($textElement.length) {
+                let textIndex = 0;
+                let characterIndex = 0;
+
+                function typeWriter() {
+                    if (characterIndex < texts[textIndex].length) {
+                        $textElement.text($textElement.text() + texts[textIndex].charAt(characterIndex));
+                        characterIndex++;
+                        setTimeout(typeWriter, speed);
+                    } else {
+                        setTimeout(eraseText, 1500);
+                    }
+                }
+
+                function eraseText() {
+                    const currentText = $textElement.text();
+                    if (currentText.length > 0) {
+                        $textElement.text(currentText.slice(0, -1));
+                        setTimeout(eraseText, 50);
+                    } else {
+                        textIndex = (textIndex + 1) % texts.length;
+                        characterIndex = 0;
+                        setTimeout(typeWriter, 500);
+                    }
+                }
                 typeWriter();
             }
         });
