--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
     <div class="background-elements"></div>
+
+    <i class="scroll-up" id="scroll-up"
+                ><img
+                    src="imgs/icon.gif"
+                    class="socicon up-arrow"
+                    alt=""
+            /></i>
 
     <nav>
         <div class="nav-logo"><span class="logo-khac">Khắc</span> Huy</div>
@@ -74,7 +82,7 @@
             <h2 class="section-title">About <span>Me</span></h2>
             <div class="about-content">
                 <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="main.png" alt="Ảnh chân dung của Khắc Huy">
+                    <img src="imgs/main.png" alt="Khắc Huy">
                 </div>
                 <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
                     <h3>Web Developer & Second Year IT Student</h3>
@@ -254,5 +262,12 @@
             }
         });
     </script>
+    <script src="particles.js"></script>
+    <i class="scroll-up" id="scroll-up"
+            ><img
+                src="imgs/icon.gif"
+                class="socicon up-arrow"
+                alt=""
+        /></i>
 </body>
 </html>
