--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
 <body>
     <div class="background-elements"></div>
 
-    <i class="scroll-up" id="scroll-up"
-                ><img
-                    src="imgs/icon.gif"
-                    class="socicon up-arrow"
-                    alt=""
-            /></i>
 
     <nav>
         <div class="nav-logo"><span class="logo-khac">Khắc</span> Huy</div>
@@ -61,7 +55,7 @@
                 <div data-aos="fade-left" data-aos-duration="1500" class="typewriter">I'm a <span class="typewriter-text"></span><span class="cursor">|</span></div>
                 <p data-aos="flip-down" data-aos-duration="1500">a web developer with experience in developing modern web applications. I am passionate about technology and always looking for opportunities to learn and improve my skills.</p>
                 <div class="buttons">
-                    <a href="#contact"><button>Hire Me</button></a>
+                    <a href="#contact"><button>Contact Me</button></a>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/lekhachuy1902" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/LeKhacHuy1902/Gym-management-system.git" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
@@ -77,12 +71,13 @@
         </div>
     </section>
 
+
     <section id="introduction">
         <div class="section-container" data-aos="fade-up">
             <h2 class="section-title">About <span>Me</span></h2>
             <div class="about-content">
                 <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="imgs/main.png" alt="Khắc Huy">
+                    <img src="main.png" alt="Khắc Huy">
                 </div>
                 <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
                     <h3>Web Developer & Second Year IT Student</h3>
@@ -97,6 +92,7 @@
             </div>
         </div>
     </section>
+
 
     <section id="skills">
         <div class="section-container" data-aos="fade-up">
@@ -138,6 +134,7 @@
         </div>
     </section>
 
+
     <section id="services">
         <div class="section-container" data-aos="fade-up">
             <h2 class="section-title">What I <span>Offer</span></h2>
@@ -165,6 +162,7 @@
             </div>
         </div>
     </section>
+
 
     <section id="contact">
         <div class="section-container" data-aos="fade-up">
@@ -201,6 +199,7 @@
         <p>&copy; 2025 Khắc Huy. All Rights Reserved.</p>
     </footer>
 
+    
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -263,11 +262,6 @@
         });
     </script>
     <script src="particles.js"></script>
-    <i class="scroll-up" id="scroll-up"
-            ><img
-                src="imgs/icon.gif"
-                class="socicon up-arrow"
-                alt=""
-        /></i>
+    
 </body>
 </html>
