--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio của Khắc Huy - một lập trình viên web đam mê và sáng tạo." />
-    <title>Khắc Huy | Nhà phát triển Web</title>
+    <title>Khắc Huy | Profile</title>
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.96/build/spline-viewer.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
@@ -74,7 +74,7 @@
 
     <section id="introduction">
         <div class="section-container" data-aos="fade-up">
-            <h2 class="section-title">Về <span>Tôi</span></h2>
+            <h2 class="section-title">Thông Tin <span> Về Tôi</span></h2>
             <div class="about-content">
                 <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
                     <img src="main.png" alt="Khắc Huy">
@@ -141,22 +141,22 @@
             <div class="cards-grid">
                 <div class="service-card" data-aos="fade-up" data-aos-delay="100">
                     <i class="fa-solid fa-palette"></i>
-                    <h3>Thiết kế Web</h3>
+                    <h3>Web Design</h3>
                     <p>Tạo ra các thiết kế trực quan ấn tượng và thân thiện với người dùng giúp nâng cao trải nghiệm và sự tương tác của người dùng.</p>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="200">
                     <i class="fa-solid fa-code"></i>
-                    <h3>Phát triển Front-end</h3>
+                    <h3>Frontend Development</h3>
                     <p>Xây dựng các ứng dụng phía client phản hồi nhanh và tương tác bằng cách sử dụng các công nghệ web hiện đại.</p>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                     <i class="fa-solid fa-server"></i>
-                    <h3>Phát triển Back-end</h3>
+                    <h3>Backend Development</h3>
                     <p>Phát triển logic phía máy chủ mạnh mẽ và API để cung cấp năng lượng cho các ứng dụng web từ đầu.</p>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                     <i class="fa-solid fa-rocket"></i>
-                    <h3>Ứng dụng</h3>
+                    <h3>Application</h3>
                     <p>Xây dựng và triển khai các ứng dụng web full-stack có khả năng mở rộng để đáp ứng các nhu cầu kinh doanh cụ thể.</p>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                     <label for="message" class="sr-only">Tin nhắn của bạn</label>
                     <textarea id="message" name="message" rows="6" placeholder="Tin nhắn của bạn" required></textarea>
                     
-                    <button type="submit">Gửi tin nhắn</button>
+                    <button type="submit">Gửi</button>
                 </form>
                 <div class="contact-info" data-aos="fade-left">
                     <h3>Thông tin liên hệ</h3>
@@ -196,7 +196,7 @@
 
 
     <footer>
-        <p>&copy; 2025 Khắc Huy. Mọi quyền được bảo lưu.</p>
+        <p>&copy; 2025 Khắc Huy. All Rights Reserved.</p>
     </footer>
 
     
