--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 
     <section id="introduction">
         <div class="section-container" data-aos="fade-up">
-            <h2 class="section-title">Thông Tin <span> Về Tôi</span></h2>
+            <h2 class="section-title">Thông tin <span> về tôi</span></h2>
             <div class="about-content">
                 <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
                     <img src="main.png" alt="Khắc Huy">
                 </div>
                 <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
                     <h3>Web Developer & Sinh viên IT năm hai</h3>
-                    <p>Tôi là một nhà phát triển web tận tâm và đam mê hiện đang theo học. Hành trình của tôi vào thế giới lập trình bắt đầu từ sự say mê về cách các trang web hoạt động... Mục tiêu của tôi là tạo ra các ứng dụng web không chỉ hấp dẫn về mặt hình ảnh mà còn cung cấp trải nghiệm người dùng liền mạch và trực quan.</p>
+                    <p>Tôi là một nhà phát triển web tận tâm và đam mê hiện đang theo học tại UTH. Hành trình của tôi vào thế giới lập trình bắt đầu từ sự say mê về cách các trang web hoạt động... Mục tiêu của tôi là tạo ra các ứng dụng web không chỉ hấp dẫn về mặt hình ảnh mà còn cung cấp trải nghiệm người dùng liền mạch và trực quan.</p>
                     <div class="education-info">
                     <h3>Học vấn và Nền tảng</h3>
                     <p><strong>Trường đại học:</strong> Đại học Giao thông Vận tải Thành phố Hồ Chí Minh</p>
